# obs-studio

./: CMakeLists.txt  VSCMakeSettings.json.example
UI/: CMakeLists.txt  window-basic-main.cpp
UI/weiqi/: weiqi-obs.cpp  weiqi-obs.h
libobs/: obs-module.c
test/win/: test.cpp
weiqi/: CMakeLists.txt  weiqi-obs.cpp  weiqi-obs.h
